@@ -1,1 +1,2 @@
 1. Upto payload ready for api upload --- 20_12_2025
+2. updated merlin api upload and merlin api setup -- 20_12_2025
